Completed work for images and corrected some of the issues with spacing inbetween them.

--- a/angular-app/src/assets/scss/styles.css
+++ b/angular-app/src/assets/scss/styles.css
@@ -1,7 +1,7 @@
 body {
   background-color: #222;
 }
-.section-image img {
+.section-image  {
   padding: 0!important;
 }
 
@@ -1733,7 +1733,6 @@ html {
   background-size: cover;
   width: 100%;
   height: 500px;
-  margin: 30px 0 0 0;
   transition: all 1s ease;
 }
 
